fixed freeze on drag, handle resize to screen size, replaced center node with a nice sphere, added zoom and pan, light UI colors, expand/collapse WIP

--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,4 @@
-.root-argument .control {
+.root-argument .control, .root-argument rect, .root-argument text {
     display: none;
 }
 
